syntax = "proto3";

package pb;

option go_package="./pb";

message UserRequest{
  string username =1;
  string password =2;
}

message UserResponse{
  int64 userid=1;
  string token=2;
}
message CheckDepositReq{
  int64 userid=1;
}
message  CheckDepositResp{
  int64  deposit=1;
}
message UpdataDepositReq{
  int64 userid=1;
  int64 account=2;
}
message UpdataDepositResp{
  string msg=1;
}
service user{
  rpc  login(UserRequest) returns(UserResponse);
  rpc  register(UserRequest)returns(UserResponse);
  rpc  checkdeposit(CheckDepositReq)returns(CheckDepositResp);
  rpc  updatadeposit(UpdataDepositReq)returns(UpdataDepositResp);
};
